# zroid

./: Cargo.toml  Doxyfile  PIPELINE.md  README.md  deny.toml  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
src/: main.rs
