[package]
name = "zord"
version = "0.1.0"
edition = "2024"
description = "A hyper-performance, virtualized IDE."
license = "MIT"
repository = "https://github.com/example/zord"
keywords = ["ide", "editor", "performance"]
categories = ["development-tools"]

[dependencies]
chrono = "0.4.45"
crossbeam-channel = "0.5.15"
eframe = { version = "0.34.3", features = ["wgpu", "default_fonts"] }
env_logger = "0.11.10"
ignore = "0.4.26"
log = "0.4.32"
memmap2 = "0.9.10"
ropey = "1.6.1"
rquickjs = { version = "0.12.0", features = ["macro"] }
serde = { version = "1.0.228", features = ["derive"] }
syntect = "5.3.0"
tokio = { version = "1.52.3", features = ["full"] }
tree-sitter = "0.26.9"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-cpp = "0.23.4"
tree-sitter-javascript = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
walkdir = "2.5.0"
